--- a/1001.md
+++ b/1001.md
@@ -2,7 +2,7 @@
 
 The movies from every “1001 Movies to See Before You Die” editions from 2003 to the last update in 2021. This list includes 1245 movies from 1902 to 2020.
     
-Downloaded: 95 Movies
+Downloaded: 135 Movies
 
 1. [A Trip to the Moon (1902)](https://www.imdb.com/title/tt0000417/)
 - IMDB Rating: 8.2
@@ -603,46 +603,383 @@ Downloaded: 95 Movies
 - Plot: When the police in a German city are unable to catch a child-murderer, other criminals join in the manhunt.
 - Files:
     - 0061.1001.M.1931.720p.BluRay.x264.Skazhutin.mkv
-62. [Limit](https://www.imdb.com/title/tt0022080/)
-63. [Frankenstein](https://www.imdb.com/title/tt0021884/)
-64. [La Chienne](https://www.imdb.com/title/tt0021739/)
-65. [À Nous la Liberté](https://www.imdb.com/title/tt0022599/)
-66. [Shanghai Express](https://www.imdb.com/title/tt0023458/)
-67. [Freaks](https://www.imdb.com/title/tt0022913/)
-68. [Scarface](https://www.imdb.com/title/tt0023427/)
-69. [Vampyr](https://www.imdb.com/title/tt0023649/)
-70. [Love Me Tonight](https://www.imdb.com/title/tt0023158/)
-71. [Trouble in Paradise](https://www.imdb.com/title/tt0023622/)
-72. [I Am a Fugitive from a Chain Gang](https://www.imdb.com/title/tt0023042/)
-73. [Boudu Saved from Drowning](https://www.imdb.com/title/tt0022718/)
-74. [Me and My Gal](https://www.imdb.com/title/tt0023202/)
-75. [The Bitter Tea of General Yen](https://www.imdb.com/title/tt0023814/)
-76. [She Done Him Wrong](https://www.imdb.com/title/tt0024548/)
-77. [42nd Street](https://www.imdb.com/title/tt0024034/)
-78. [King Kong](https://www.imdb.com/title/tt0024216/)
-79. [Zero de Conduite](https://www.imdb.com/title/tt0024803/)
-80. [Gold Diggers of 1933](https://www.imdb.com/title/tt0024069/)
-81. [Footlight Parade](https://www.imdb.com/title/tt0024028/)
-82. [Duck Soup](https://www.imdb.com/title/tt0023969/)
-83. [Queen Christina](https://www.imdb.com/title/tt0024481/)
-84. [Sons of the Desert](https://www.imdb.com/title/tt0024601/)
-85. [Land Without Bread](https://www.imdb.com/title/tt0023037/)
-86. [It Happened One Night](https://www.imdb.com/title/tt0025316/)
-87. [L’Atalante](https://www.imdb.com/title/tt0024844/)
-88. [The Black Cat](https://www.imdb.com/title/tt0024894/)
-89. [The Thin Man](https://www.imdb.com/title/tt0025878/)
-90. [Judge Priest](https://www.imdb.com/title/tt0025335/)
-91. [It’s a Gift](https://www.imdb.com/title/tt0025318/)
-92. [The Goddess](https://www.imdb.com/title/tt0195256/)
-93. [The Triumph of the Will](https://www.imdb.com/title/tt0025913/)
-94. [Bride of Frankenstein](https://www.imdb.com/title/tt0026138/)
-95. [The 39 Steps](https://www.imdb.com/title/tt0026029/)
-96. [Top Hat](https://www.imdb.com/title/tt0027125/)
-97. [Peter Ibbetson](https://www.imdb.com/title/tt0026866/)
-98. [A Night at the Opera](https://www.imdb.com/title/tt0026778/)
-99. [Mutiny on the Bounty](https://www.imdb.com/title/tt0026752/)
-100. [Captain Blood](https://www.imdb.com/title/tt0026174/)
-101. [Song at Midnight](https://www.imdb.com/title/tt0206442/)
+62. [Limit (1931)](https://www.imdb.com/title/tt0022080/)
+- IMDB Rating: 7.1
+- Director: Mario Peixoto
+- Writer: Mario Peixoto
+- Actors: Olga Breno, Tatiana Rey, Raul Schnoor
+- Genre: Drama, Romance
+- Plot: Three people (Raul Schnoor, Olga Breno and Tatiana Rey) sail aimlessly while remembering their past.
+- Files:
+    - 
+63. [Frankenstein (1931)](https://www.imdb.com/title/tt0021884/)
+- IMDB Rating: 7.8
+- Director: James Whale
+- Writer: John L. Balderston, Mary Shelley, Peggy Webling
+- Actors: Colin Clive, Mae Clarke, Boris Karloff
+- Genre: Drama, Horror, Sci-Fi
+- Plot: Dr. Frankenstein dares to tamper with life and death by creating a human monster out of lifeless body parts.
+- Files:
+    - 0063.1001.Frankenstein.1931.720p.BluRay.FLAC.x264-CtrlHD.mkv
+64. [La Chienne (1931)](https://www.imdb.com/title/tt0021739/)
+- IMDB Rating: 7.5
+- Director: Jean Renoir
+- Writer: Georges de La Fouchardière, Jean Renoir, André Girard
+- Actors: Michel Simon, Janie Marèse, Georges Flamant
+- Genre: Crime, Drama
+- Plot: Maurice Legrand, a meek cashier married to a nagging wife, has a secret passion: he's a Sunday painter. He falls in love with Lulu, a young woman dominated by Dédé, the pimp who she works for. Dédé pushes Lulu into a relationship ...
+- Files:
+    - 0064.1001.La chienne.1931.bdrip.avi
+    - 0064.1001.La chienne.1931.bdrip_sub.eng.srt
+    - 0064.1001.La chienne.1931.bdrip_sub.rus.srt
+65. [À Nous la Liberté (1931)](https://www.imdb.com/title/tt0022599/)
+- IMDB Rating: 7.4
+- Director: René Clair
+- Writer: René Clair
+- Actors: Raymond Cordy, Henri Marchand, Rolla France
+- Genre: Comedy, Musical
+- Plot: Seeking better life, two convicts escape from prison.
+- Files:
+    - 0065.1001.Svobodu.nam.avi
+    - 0065.1001.svobodu.nam.srt
+66. [Shanghai Express (1932)](https://www.imdb.com/title/tt0023458/)
+- IMDB Rating: 7.3
+- Director: Josef von Sternberg
+- Writer: Jules Furthman, Harry Hervey
+- Actors: Marlene Dietrich, Clive Brook, Anna May Wong
+- Genre: Adventure, Drama, Film-Noir
+- Plot: A notorious woman rides a train through a dangerous situation with a British captain she loved.
+- Files:
+    - 0066.1001.Shanghai_Express_1932.BDRip.x264_cw.mkv
+    - 0066.1001.Shanghai_Express_1932.BDRip.x264_cw_DVO Светла.ac3
+67. [Freaks (1932)](https://www.imdb.com/title/tt0022913/)
+- IMDB Rating: 7.8
+- Director: Tod Browning
+- Writer: Clarence Aaron 'Tod' Robbins, Willis Goldbeck, Leon Gordon
+- Actors: Wallace Ford, Leila Hyams, Olga Baclanova
+- Genre: Drama, Horror
+- Plot: A circus' beautiful trapeze artist agrees to marry the leader of side-show performers, but his deformed friends discover she is only marrying him for his inheritance.
+- Files:
+    - 0067.1001.Freaks.1932.720p.WEB-DL.AAC2.0.h.264-fiend.mkv
+68. [Scarface (1932)](https://www.imdb.com/title/tt0023427/)
+- IMDB Rating: 7.7
+- Director: Howard Hawks, Richard Rosson
+- Writer: Armitage Trail, Ben Hecht, Seton I. Miller
+- Actors: Paul Muni, Ann Dvorak, Karen Morley
+- Genre: Action, Crime, Drama
+- Plot: An ambitious and nearly insane violent gangster climbs the ladder of success in the mob, but his weaknesses prove to be his downfall.
+- Files:
+    - 0068.1001.Scarface.1932.1080p.WEB-DL.DD2.0.x264.-whip93.mkv
+69. [Vampyr (1932)](https://www.imdb.com/title/tt0023649/)
+- IMDB Rating: 7.4
+- Director: Carl Theodor Dreyer
+- Writer: Sheridan Le Fanu, Christen Jul, Carl Theodor Dreyer
+- Actors: Julian West, Maurice Schutz, Rena Mandel
+- Genre: Fantasy, Horror
+- Plot: A drifter obsessed with the supernatural stumbles upon an inn where a severely ill adolescent girl is slowly becoming a vampire.
+- Files:
+    - 0069.1001.Vampyr.1932.Criterion.Collection.BDRip.720p.mkv
+70. [Love Me Tonight (1932)](https://www.imdb.com/title/tt0023158/)
+- IMDB Rating: 7.5
+- Director: Rouben Mamoulian
+- Writer: Samuel Hoffenstein, George Marion Jr., Waldemar Young
+- Actors: Maurice Chevalier, Jeanette MacDonald, Charles Ruggles
+- Genre: Comedy, Musical, Romance
+- Plot: A Parisian tailor finds himself posing as a baron in order to collect a sizeable bill from an aristocrat, only to fall in love with an aloof young princess.
+- Files:
+    - 
+71. [Trouble in Paradise (1932)](https://www.imdb.com/title/tt0023622/)
+- IMDB Rating: 8.0
+- Director: Ernst Lubitsch
+- Writer: Samson Raphaelson, Grover Jones, Aladar Laszlo
+- Actors: Miriam Hopkins, Kay Francis, Herbert Marshall
+- Genre: Comedy, Crime, Romance
+- Plot: A gentleman thief and a lady pickpocket join forces to con a beautiful perfume company owner. Romantic entanglements and jealousies confuse the scheme.
+- Files:
+    - 0071.1001.Trouble in Paradise.1932.1080p.BluRay.mkv
+72. [I Am a Fugitive from a Chain Gang (1932)](https://www.imdb.com/title/tt0023042/)
+- IMDB Rating: 8.2
+- Director: Mervyn LeRoy
+- Writer: Robert E. Burns, Howard J. Green, Brown Holmes
+- Actors: Paul Muni, Glenda Farrell, Helen Vinson
+- Genre: Crime, Drama, Film-Noir
+- Plot: Wrongly convicted James Allen serves in the intolerable conditions of a Southern chain gang, which later comes back to haunt him.
+- Files:
+    - 0072.1001.I.Am.a.Fugitive.from.a.Chain.Gang.1932.720p.WEB-DL.mkv
+73. [Boudu Saved from Drowning (1932)](https://www.imdb.com/title/tt0022718/)
+- IMDB Rating: 7.3
+- Director: Jean Renoir
+- Writer: René Fauchois, Jean Renoir, Albert Valentin
+- Actors: Michel Simon, Marcelle Hainia, Sévérine Lerczinska
+- Genre: Comedy
+- Plot: A bookseller saves a tramp from drowning and shelters him, but the tramp's odd behavior starts to wear everyone down.
+- Files:
+    - 
+74. [Me and My Gal (1932)](https://www.imdb.com/title/tt0023202/)
+- IMDB Rating: 6.6
+- Director: Raoul Walsh
+- Writer: Philip Klein, Barry Conners, Arthur Kober
+- Actors: Spencer Tracy, Joan Bennett, Marion Burns
+- Genre: Comedy, Drama, Romance
+- Plot: Young New York cop Dan falls in love with waterfront waitress Helen. Helen's sister Kate falls for gangster Duke. Dan must do in Duke.
+- Files:
+    - 0074.1001.Me and My Gal.avi
+    - 0074.1001.Me and My Gal.RUS.srt
+75. [The Bitter Tea of General Yen (1932)](https://www.imdb.com/title/tt0023814/)
+- IMDB Rating: 6.9
+- Director: Frank Capra
+- Writer: Grace Zaring Stone, Edward E. Paramore Jr.
+- Actors: Barbara Stanwyck, Nils Asther, Toshia Mori
+- Genre: Drama, Romance, War
+- Plot: A Chinese warlord and an engaged Christian missionary fall in love.
+- Files:
+    - 0075.1001.The Bitter Tea of General Yen 1933.avi
+    - 0075.1001.The Bitter Tea of General Yen 1933.ENG.mp3
+76. [She Done Him Wrong (1933)](https://www.imdb.com/title/tt0024548/)
+- IMDB Rating: 6.3
+- Director: Lowell Sherman
+- Writer: Mae West, Harvey F. Thew, John Bright
+- Actors: Mae West, Cary Grant, Owen Moore
+- Genre: Comedy, Drama, History
+- Plot: In the Gay Nineties, a seductive nightclub singer contends with several suitors, including a jealous escaped convict and a handsome temperance league member.
+- Files:
+    - 0076.1001.ona_oboshlas_s_nim_nechestno.avi
+77. [42nd Street (1933)](https://www.imdb.com/title/tt0024034/)
+- IMDB Rating: 7.3
+- Director: Lloyd Bacon
+- Writer: Rian James, James Seymour, Bradford Ropes
+- Actors: Warner Baxter, Bebe Daniels, George Brent
+- Genre: Comedy, Drama, Music
+- Plot: When the leading lady of a Broadway musical breaks her ankle, she is replaced by a young unknown actress, who becomes the star of the show.
+- Files:
+    - 0077.1001.42nd.Street.1933.720p.BluRay.x264.mkv
+78. [King Kong (1933)](https://www.imdb.com/title/tt0024216/)
+- IMDB Rating: 7.9
+- Director: Merian C. Cooper, Ernest B. Schoedsack
+- Writer: James Ashmore Creelman, Ruth Rose, Merian C. Cooper
+- Actors: Fay Wray, Robert Armstrong, Bruce Cabot
+- Genre: Adventure, Horror, Sci-Fi
+- Plot: A film crew goes to a tropical island for a location shoot, where they capture a colossal ape who takes a shine to their blonde starlet, and bring him back to New York City.
+- Files:
+    - 0078.1001.King Kong.1933.BDRip.1080p.mkv
+79. [Zero de Conduite (1933)](https://www.imdb.com/title/tt0024803/)
+- IMDB Rating: 7.2
+- Director: Jean Vigo
+- Writer: Jean Vigo
+- Actors: Jean Dasté, Robert le Flon, Louis Lefebvre
+- Genre: Short, Drama
+- Plot: In a repressive boarding school with rigid rules of behavior, four boys decide to rebel against the direction on a celebration day.
+- Files:
+    - 
+80. [Gold Diggers of 1933 (1933)](https://www.imdb.com/title/tt0024069/)
+- IMDB Rating: 7.7
+- Director: Mervyn LeRoy
+- Writer: Erwin Gelsey, James Seymour, David Boehm
+- Actors: Warren William, Joan Blondell, Aline MacMahon
+- Genre: Comedy, Drama, Musical
+- Plot: A wealthy composer rescues unemployed Broadway performers with a new play, but insists on remaining anonymous.
+- Files:
+    - 0080.1001.Gold.Diggers.of.1933.WEB-DL.720p.mkv
+81. [Footlight Parade (1933)](https://www.imdb.com/title/tt0024028/)
+- IMDB Rating: 7.5
+- Director: Lloyd Bacon
+- Writer: Manuel Seff, James Seymour, Robert Lord
+- Actors: James Cagney, Joan Blondell, Ruby Keeler
+- Genre: Comedy, Musical, Romance
+- Plot: Chester Kent struggles against time, romance, and a rival's spy to produce spectacular live "prologues" for movie houses.
+- Files:
+    - 0081.1001.Footlight.Parade.avi
+82. [Duck Soup (1933)](https://www.imdb.com/title/tt0023969/)
+- IMDB Rating: 7.8
+- Director: Leo McCarey
+- Writer: Bert Kalmar, Harry Ruby, Arthur Sheekman
+- Actors: Groucho Marx, Harpo Marx, Chico Marx
+- Genre: Comedy, Musical
+- Plot: Rufus T. Firefly is named the dictator of bankrupt Freedonia and declares war on neighboring Sylvania over the love of his wealthy backer Mrs. Teasdale, contending with two inept spies who can't seem to keep straight which side th...
+- Files:
+    - 0082.1001.Duck.Soup.1933.720p.WEB-DL.AAC2.0.H.264-DON.mkv
+83. [Queen Christina (1933)](https://www.imdb.com/title/tt0024481/)
+- IMDB Rating: 7.5
+- Director: Rouben Mamoulian
+- Writer: H.M. Harwood, Salka Viertel, Margaret P. Levino
+- Actors: Greta Garbo, John Gilbert, Ian Keith
+- Genre: Biography, Drama, Romance
+- Plot: Queen Christina of Sweden is a popular monarch who is loyal to her country. However, when she falls in love with a Spanish envoy, she must choose between the throne and the man she loves.
+- Files:
+    - 0083.1001.koroleva_kristina.avi
+    - 0083.1001.koroleva_kristina.srt
+84. [Sons of the Desert (1933)](https://www.imdb.com/title/tt0024601/)
+- IMDB Rating: 7.5
+- Director: William A. Seiter
+- Writer: Frank Craven, Oliver Hardy, Jack Barty
+- Actors: Stan Laurel, Oliver Hardy, Charley Chase
+- Genre: Comedy, Family, Music
+- Plot: When Stan and Ollie trick their wives into thinking that they are taking a medicinal cruise while they're actually going to a convention, the wives find out the truth the hard way.
+- Files:
+    - 0084.1001.Sons.Of.The.Desert.1933.USA.AC3.Rus.avi
+85. [Land Without Bread (1933)](https://www.imdb.com/title/tt0023037/)
+- IMDB Rating: 7.3
+- Director: Luis Buñuel
+- Writer: Luis Buñuel, Rafael Sánchez Ventura, Pierre Unik
+- Actors: Abel Jacquin, Alexandre O'Neill
+- Genre: Documentary, Short
+- Plot: A surrealistic documentary portrait of the region of Las Hurdes, a remote region of Spain where civilisation has barely developed, showing how the local peasants try to survive without even the most basic utilities and skills.
+- Files:
+    - 0085.1001.Las.hurdes.tierra.sin.pan.avi
+    - 0085.1001.Las.hurdes.tierra.sin.pan.srt
+86. [It Happened One Night (1934)](https://www.imdb.com/title/tt0025316/)
+- IMDB Rating: 8.1
+- Director: Frank Capra
+- Writer: Robert Riskin, Samuel Hopkins Adams
+- Actors: Clark Gable, Claudette Colbert, Walter Connolly
+- Genre: Comedy, Romance
+- Plot: A renegade reporter trailing a young runaway heiress for a big story joins her on a bus heading from Florida to New York, and they end up stuck with each other when the bus leaves them behind at one of the stops.
+- Files:
+    - 0086.1001.It.Happened.One.Night.BDRip.720p.mkv
+87. [L’Atalante (1934)](https://www.imdb.com/title/tt0024844/)
+- IMDB Rating: 7.8
+- Director: Jean Vigo
+- Writer: Jean Guinée, Albert Riéra, Jean Vigo
+- Actors: Dita Parlo, Jean Dasté, Gilles Margaritis
+- Genre: Comedy, Drama, Romance
+- Plot: Newly married couple Juliette and a ship captain Jean struggle through marriage as they travel on the L'atalante along with the captain's first mate Le père Jules and a cabin boy.
+- Files:
+    - 0087.1001.L.atalante.1934.720p.BluRay.Rus.mkv
+88. [The Black Cat (1934)](https://www.imdb.com/title/tt0024894/)
+- IMDB Rating: 6.9
+- Director: Edgar G. Ulmer
+- Writer: Edgar Allan Poe, Peter Ruric, Edgar G. Ulmer
+- Actors: Boris Karloff, Bela Lugosi, David Manners
+- Genre: Adventure, Crime, Horror
+- Plot: American honeymooners in Hungary become trapped in the home of a Satan-worshipping priest when the bride is taken there for medical help following a road accident.
+- Files:
+    - 0088.1001.The.Black.Cat.1934.bdrip.avi
+    - 0088.1001.The.Black.Cat.1934.bdrip.sub.eng.srt
+    - 0088.1001.The.Black.Cat.1934.bdrip.eng.ac3
+89. [The Thin Man (1934)](https://www.imdb.com/title/tt0025878/)
+- IMDB Rating: 7.9
+- Director: W.S. Van Dyke
+- Writer: Albert Hackett, Frances Goodrich, Dashiell Hammett
+- Actors: William Powell, Myrna Loy, Maureen O'Sullivan
+- Genre: Comedy, Crime, Mystery
+- Plot: Former detective Nick Charles and his wealthy wife Nora investigate a murder case, mostly for the fun of it.
+- Files:
+    - 0089.1001.The.Thin.Man.WEB-DL.1080p.mkv
+90. [Judge Priest (1934)](https://www.imdb.com/title/tt0025335/)
+- IMDB Rating: 6.2
+- Director: John Ford
+- Writer: Irvin S. Cobb, Dudley Nichols, Lamar Trotti
+- Actors: Will Rogers, Tom Brown, Anita Louise
+- Genre: Comedy, Drama, Romance
+- Plot: Judge Priest, a proud Confederate veteran, uses common sense and considerable humanity to dispense justice in a small town in the Post-Bellum Kentucky.
+- Files:
+    - 0090.1001.Sudja.Prist.1934.DVDRip.Rus.Eng.avi
+91. [It’s a Gift (1934)](https://www.imdb.com/title/tt0025318/)
+- IMDB Rating: 7.1
+- Director: Norman Z. McLeod
+- Writer: Jack Cunningham, J.P. McEvoy, W.C. Fields
+- Actors: W.C. Fields, Kathleen Howard, Jean Rouverol
+- Genre: Comedy
+- Plot: A henpecked New Jersey grocer makes plans to move to California to grow oranges, despite the resistance of his overbearing wife.
+- Files:
+    - 0091.1001.It.s.a.gift.1934.avi
+    - 0091.1001.It.s.a.gift.1934.idx
+    - 0091.1001.It.s.a.gift.1934.rus.srt
+    - 0091.1001.It.s.a.gift.1934.sub
+92. [The Goddess (1934)](https://www.imdb.com/title/tt0195256/)
+- IMDB Rating: 7.7
+- Director: Yonggang Wu
+- Writer: Yonggang Wu
+- Actors: Lingyu Ruan, Tian Jian, Zhizhi Zhang
+- Genre: Drama
+- Plot: Street walker by night, devoted mother by day, a woman fights to get her young son an education amid criminal and social injustice in China.
+- Files:
+    - 0092.1001.Shen.Nu.Goddess.1934.avi
+    - 0092.1001.Shen.Nu.Goddess.1934.srt
+93. [The Triumph of the Will (1935)](https://www.imdb.com/title/tt0025913/)
+- IMDB Rating: 7.2
+- Director: Leni Riefenstahl
+- Writer: Leni Riefenstahl, Walter Ruttmann, Eberhard Taubert
+- Actors: Adolf Hitler, Hermann Göring, Max Amann
+- Genre: Documentary, History
+- Plot: The infamous propaganda film of the 1934 Nazi Party rally in Nuremberg, Germany.
+- Files:
+    - 0093.1001.Triumph of the Will.1934.DVDRip-AVC.3xAC3.mkv
+    - 0093.1001.Tag der Freiheit. Unsere Wehrmacht.1934.DVDRip-AVC.mkv
+94. [Bride of Frankenstein (1935)](https://www.imdb.com/title/tt0026138/)
+- IMDB Rating: 7.8
+- Director: James Whale
+- Writer: Mary Shelley, William Hurlbut, John L. Balderston
+- Actors: Boris Karloff, Elsa Lanchester, Colin Clive
+- Genre: Drama, Horror, Sci-Fi
+- Plot: Mary Shelley reveals the main characters of her novel survived: Dr. Frankenstein, goaded by an even madder scientist, builds his monster a mate.
+- Files:
+    - 
+95. [The 39 Steps (1935)](https://www.imdb.com/title/tt0026029/)
+- IMDB Rating: 7.6
+- Director: Alfred Hitchcock
+- Writer: John Buchan, Charles Bennett, Ian Hay
+- Actors: Robert Donat, Madeleine Carroll, Lucie Mannheim
+- Genre: Crime, Mystery, Thriller
+- Plot: A man in London tries to help a counter-espionage agent, but when the agent is killed and the man stands accused, he must go on the run to save himself and stop a spy ring that is trying to steal top-secret information.
+- Files:
+    - 
+96. [Top Hat (1935)](https://www.imdb.com/title/tt0027125/)
+- IMDB Rating: 7.7
+- Director: Mark Sandrich
+- Writer: Dwight Taylor, Allan Scott, Aladar Laszlo
+- Actors: Fred Astaire, Ginger Rogers, Edward Everett Horton
+- Genre: Comedy, Musical, Romance
+- Plot: An American dancer comes to Britain and falls for a model whom he initially annoyed, but she mistakes him for his goofy producer.
+- Files:
+    - 
+97. [Peter Ibbetson (1935)](https://www.imdb.com/title/tt0026866/)
+- IMDB Rating: 6.9
+- Director: Henry Hathaway
+- Writer: Vincent Lawrence, Waldemar Young, John Meehan
+- Actors: Gary Cooper, Ann Harding, John Halliday
+- Genre: Drama, Fantasy, Music
+- Plot: A Victorian-era architect commissioned by the Duke of Towers to design his stables falls in love with the Duchess.
+- Files:
+    - 
+98. [A Night at the Opera (1935)](https://www.imdb.com/title/tt0026778/)
+- IMDB Rating: 7.8
+- Director: Sam Wood, Edmund Goulding
+- Writer: George S. Kaufman, Morrie Ryskind, James Kevin McGuinness
+- Actors: Groucho Marx, Chico Marx, Harpo Marx
+- Genre: Comedy, Music, Musical
+- Plot: A sly business manager and the wacky friends of two opera singers in Italy help them achieve success in America while humiliating their stuffy and snobbish enemies.
+- Files:
+    - 0098.1001.Vecher.v.opere.1935.BDRip.1.46.avi
+    - 0098.1001.Vecher.v.opere.1935.BDRip.1.46.rus.srt
+    - 0098.1001.Vecher.v.opere.1935.BDRip.1.46.eng.srt
+99. [Mutiny on the Bounty (1935)](https://www.imdb.com/title/tt0026752/)
+- IMDB Rating: 7.6
+- Director: Frank Lloyd
+- Writer: Talbot Jennings, Jules Furthman, Carey Wilson
+- Actors: Charles Laughton, Clark Gable, Franchot Tone
+- Genre: Adventure, Biography, Drama
+- Plot: First mate Fletcher Christian leads a revolt against his sadistic commander, Captain Bligh, in this classic seafaring adventure, based on the real-life 1789 mutiny.
+- Files:
+    - 
+100. [Captain Blood (1935)](https://www.imdb.com/title/tt0026174/)
+- IMDB Rating: 7.7
+- Director: Michael Curtiz
+- Writer: Rafael Sabatini, Casey Robinson
+- Actors: Errol Flynn, Olivia de Havilland, Lionel Atwill
+- Genre: Action, Adventure, History
+- Plot: After treating a Monmouth rebel against King James II in 1680s England, a young Irish doctor is exiled as a slave to Jamaica where he captures a Spanish galleon and becomes the most feared pirate of the Caribbean.
+- Files:
+    - 
+101. [Song at Midnight (1935)](https://www.imdb.com/title/tt0206442/)
+- IMDB Rating: 6.2
+- Director: Weibang Ma-Xu
+- Writer: Gaston Leroux, Weibang Ma-Xu
+- Actors: Menghe Gu, Ping Hu, Shan Jin
+- Genre: Horror, Romance
+- Plot: China's first horror film, this is loosely based on The Phantom of the Opera. A disfigured musical genius roams a traditional Chinese opera house, punishing those who offend him.
+- Files:
+    - 
 102. [Modern Times](https://www.imdb.com/title/tt0027977/)
 103. [Things to Come](https://www.imdb.com/title/tt0028358/)
 104. [Mr. Deeds Goes to Town](https://www.imdb.com/title/tt0027996/)
